--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -19,6 +19,19 @@
         <div class="actions">
             <ul>
                 <li><%= link_to "Edit", edit_task_list_path(task_list) %></li>
+                <li>
+                    <%= link_to "Add Task",
+                                new_task_list_task_path(task_list),
+                                :class => "action" %>
+                </li>
+            </ul>
+        </div>
+
+        <div class="tasks">
+            <ul>
+                <% task_list.tasks.each do |task| %>
+                    <li><%= task.description %></li>
+                <% end %>
             </ul>
         </div>
     </section>
