--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,8 +4,11 @@
     <%= f.label :description %>
     <%= f.text_field :description %>
 
-    <%= f.label :due_date %>
-    <%= f.date_select :due_date %>
-    
+
+    <div>
+        <%= f.label :due_date %>
+        <%= f.date_select :due_date %>
+    </div>
+
     <%= f.submit %>
 <% end %>
