Show errors on task new

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,6 +71,12 @@ form {
     display: block;
     width: 50%;
   }
+
+  .field_with_errors {
+    label {
+      color: red;
+    }
+  }
 }
 
 header {
