--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,8 +164,19 @@ main {
 
   li {
     width: 880px;
+    height: 35px;
+    line-height: 35px;
     padding: 15px;
     margin: 0;
     background: lightgray;
+    overflow: hidden;
+    vertical-align: middle;
+  }
+
+  .actions {
+    input[type=submit] {
+      margin: 0;
+      font-size: 16px;
+    }
   }
 }
