--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -32,7 +32,9 @@
                 <% task_list.tasks.each do |task| %>
                     <li>
                         <%= task.description %>
-                        <%= button_to "Delete", task_list_task_path(task_list, task), :method => :delete %>
+                        <div class="actions">
+                            <%= button_to "Delete", task_list_task_path(task_list, task), :method => :delete %>
+                        </div>
                     </li>
                 <% end %>
             </ul>
