--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -33,7 +33,9 @@
                     <li>
                         <%= task.description %>
                         <div class="actions">
-                            <%= button_to "Delete", task_list_task_path(task_list, task), :method => :delete %>
+                            <%= button_to "Delete",
+                                          task_list_task_path(task_list, task),
+                                          :method => :delete, :class => "delete" %>
                         </div>
                     </li>
                 <% end %>
