--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -13,34 +13,6 @@
 
 <% @task_lists.each do |task_list| %>
 
-    <section class="task-list">
-        <h1><%= task_list.name %></h1>
-
-        <div class="actions">
-            <ul>
-                <li><%= link_to "Edit", edit_task_list_path(task_list) %></li>
-                <li>
-                    <%= link_to "Add Task",
-                                new_task_list_task_path(task_list),
-                                :class => "action" %>
-                </li>
-            </ul>
-        </div>
-
-        <div class="tasks">
-            <ul>
-                <% task_list.tasks.each do |task| %>
-                    <li>
-                        <%= task.description %>
-                        <div class="actions">
-                            <%= button_to "Delete",
-                                          task_list_task_path(task_list, task),
-                                          :method => :delete, :class => "delete" %>
-                        </div>
-                    </li>
-                <% end %>
-            </ul>
-        </div>
-    </section>
+    <%= render task_list %>
 
 <% end %>
