--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -184,7 +184,13 @@ main {
   }
 
   .actions {
-    input[type=submit] {
+    form {
+      display: inline-block;
+    }
+
+    [type=submit] {
+      line-height: normal;
+      width: 100px;
       margin: 0;
       font-size: 16px;
     }
