--- a/app/views/task_lists/_task_list.html.erb
+++ b/app/views/task_lists/_task_list.html.erb
@@ -3,8 +3,10 @@
 
     <div class="actions">
         <ul>
-            <li><%= link_to "Edit", edit_task_list_path(task_list) %></li>
             <li>
+                <%= link_to "Edit", edit_task_list_path(task_list) %>
+            </li>
+ <li>
                 <%= link_to "Add Task",
                             new_task_list_task_path(task_list),
                             :class => "action" %>
@@ -14,10 +16,13 @@
 
     <div class="tasks">
         <ul>
-            <% task_list.tasks.each do |task| %>
+            <% task_list.incomplete_tasks.each do |task| %>
                 <li>
                     <%= task.description %>
                     <div class="actions">
+                        <%= button_to [:complete, task_list, task] do %>
+                            Complete
+                        <% end %>
                         <%= button_to "Delete",
                                       task_list_task_path(task_list, task),
                                       :method => :delete, :class => "delete" %>
