Refactor to share all code for task lists and tasks

--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -13,6 +13,6 @@
 
 <% @task_lists.each do |task_list| %>
 
-    <%= render task_list %>
+    <%= render task_list, :tasks => task_list.incomplete_tasks %>
 
 <% end %>
