--- a/app/views/task_lists/_task_list.html.erb
+++ b/app/views/task_lists/_task_list.html.erb
@@ -1,33 +1,31 @@
-<section class="task-list">
-    <h1><%= link_to task_list.name, task_list %></h1>
+<% actions = true if actions.nil? %>
+<% title = task_list.name if title.nil? %>
 
-    <div class="actions">
-        <ul>
-            <li>
-                <%= link_to "Edit", edit_task_list_path(task_list) %>
-            </li>
- <li>
-                <%= link_to "Add Task",
-                            new_task_list_task_path(task_list),
-                            :class => "action" %>
-            </li>
-        </ul>
-    </div>
+<section class="task-list">
+    <h1><%= link_to title, task_list %></h1>
+
+    <% if actions %>
+        <div class="actions">
+            <ul>
+                <li>
+                    <%= link_to "Completed", task_list_completed_tasks_path(task_list) %>
+                </li>
+                <li>
+                    <%= link_to "Edit", edit_task_list_path(task_list) %>
+                </li>
+                <li>
+                    <%= link_to "Add Task",
+                                new_task_list_task_path(task_list),
+                                :class => "action" %>
+                </li>
+            </ul>
+        </div>
+    <% end %>
 
     <div class="tasks">
         <ul>
-            <% task_list.incomplete_tasks.each do |task| %>
-                <li>
-                    <%= task.description %>
-                    <div class="actions">
-                        <%= button_to [:complete, task_list, task] do %>
-                            Complete
-                        <% end %>
-                        <%= button_to "Delete",
-                                      task_list_task_path(task_list, task),
-                                      :method => :delete, :class => "delete" %>
-                    </div>
-                </li>
+            <% tasks.each do |task| %>
+                <%= render task, :task_list => task_list %>
             <% end %>
         </ul>
     </div>
