Added days till due date

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,5 +1,5 @@
 <li>
-    <%= task.description %>
+    <%= task.description_with_due_date %>
 
     <div class="actions">
         <% unless task.complete? %>
