User sees nice message when there are no tasks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -183,6 +183,11 @@ main {
     vertical-align: middle;
   }
 
+  p {
+    @extend li;
+    text-align: center;
+  }
+
   .actions {
     form {
       display: inline-block;
