--- a/app/views/task_lists/_task_list.html.erb
+++ b/app/views/task_lists/_task_list.html.erb
@@ -11,7 +11,9 @@
                     <%= link_to "Completed", task_list_completed_tasks_path(task_list) %>
                 </li>
                 <li>
-                    <%= link_to "Delete", task_list_path(task_list), :method => :delete, :data => {:confirm => "Are you sure?", :disable_with => "Deleting..."} %>
+                    <%= link_to "Delete", task_list_path(task_list),
+                                :method => :delete,
+                                :data => {:confirm => "Are you sure?", :disable_with => "Deleting..."} %>
                 </li>
                 <li>
                     <%= link_to "Edit", edit_task_list_path(task_list) %>
@@ -26,10 +28,14 @@
     <% end %>
 
     <div class="tasks">
-        <ul>
-            <% tasks.each do |task| %>
-                <%= render task, :task_list => task_list %>
-            <% end %>
-        </ul>
+        <% if tasks.any? %>
+            <ul>
+                <% tasks.each do |task| %>
+                    <%= render task, :task_list => task_list %>
+                <% end %>
+            </ul>
+        <% else %>
+            <p>Nothing to see here!</p>
+        <% end %>
     </div>
 </section>
