--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -14,6 +14,11 @@
         <%= f.label :due_date %>
         <%= f.date_select :due_date %>
     </div>
+    
+    <div>
+        <%= f.label :assigned_to_id, "Assigned to" %>
+        <%= f.collection_select :assigned_to_id, @users, :id, :name %>
+    </div>
 
     <%= f.submit %>
 <% end %>
